package node;

public class Stmt extends Node {

    int label_after = 0;

    Stmt() {
        super();
    }
}
